deploy/k8s/podwise-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podwise
  labels:
    name: podwise
    app: podwise-system
